# slides

./: .gitattributes  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.claude/: settings.json
.github/workflows/: build.yml
decks/202502-oss-pycon-and-me/: package.json  slides.md
decks/202502-w3c-japan-in-browser-ai/: package.json  slides.md
decks/202503-mil-alumni-event-personal-updates/: package.json  slides.md
decks/202503-ml15mins-browser-ai-standardization/: package.json  slides.md
decks/202503-ml15mis-browser-ai-standardization/: package.json  slides.md
decks/202503-w3c-japan-in-browser-ai/: package.json
decks/202505-pyconus-wasm-summit/: package.json  slides.md
decks/202507-pyconus-report/: package.json  slides.md
decks/202507-python-serverless-web-apps/: package.json  slides.md
decks/202507-python-serverless-web-apps/example/: .gitignore  anthropic_sentiment_analysis_example.py  main.py  main_streamlit_app.py  process_data.py  process_data_with_llm.py  processed_sales_data.csv  processed_sales_data_with_llm.csv  pyproject.toml  sales_data.csv  sales_data_mini.csv  streamlit_app_simple.py  streamlit_app_with_llm.py  streamlit_intro_sample.py  transformers_sentiment_analysis_sample.py
decks/202507-python-serverless-web-apps/example/stlite/: app.py  main.py
decks/202508-europython-report/: package.json  slides.md
decks/202509-python-ast-transform-async/: package.json  slides.md
decks/202510-oss-community-reward/: package.json  slides.md
scripts/: build.sh
(+87 files in other folders)
