[project]
name = "europython2025-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "pydantic-ai>=0.4.2",
    "streamlit>=1.46.1",
    "transformers[torch]>=4.53.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
